--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <p>with the Courage,Confidence,Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World. <br>
         <button style="background-color:slategray;border: 0;border-radius: 5px;color: azure;">Enroll Now</button> 
     </p></div>
-    <div ><img style="width: 100%;" src="images/hero-kids.png" alt=""></div></header>
+    <div><img style="width: 100%;" src="images/hero-kids.png" alt=""></div></header>
     <main>
         <h1>Standard Curriculum</h1>
 
-        <section>        <div><img src="images/kinder.png" alt="">
+        <section>        <div style="background-color: aqua;border-radius: 20px;padding: 10px;margin: 10px;"><img src="images/kinder.png" alt="">
         <h1>Kinder(3-6)Years</h1>
     <p>We know that quality activity in
         kindergartens (for children aged 3–6 years) influences
@@ -33,20 +33,20 @@
         lifelong learning.
         </p>
         <br>
-    <button style="color: blue;border: 0;background-color:white;">Read More</button></div>
-        <div>
+    <button style="color: blue;border: 0;background-color:aqua">Read More</button></div>
+        <div  style="background-color:palegoldenrod;border-radius: 20px;padding: 10px;margin: 10px;">
             <img src="images/elementary.png" alt="">
             <h1>Elementory School</h1>
             <p>The standard curriculum for elementary school typically includes reading, writing, math, science, and social studies. The curriculum also helps students develop critical thinking, listening, and research skills. 
             </p>
             <br>
-            <button style="color: orange;border: 0px;background-color: white;">Read More</button>
+            <button style="color: orange;border: 0px;background-color: palegoldenrodSS;">Read More</button>
         </div>
-        <div>
+        <div style="background-color:pink;border-radius: 20px;padding: 10px;margin: 10px;">
             <img src="images/middle.png" alt="">
             <h1>Middle (10-16) Years</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis inventore officiis obcaecati corrupti enim quibusdam. Optio harum blanditiis quidem illum!</p>
-            <button style="color: orange;border: 0px;background-color: white;">Read More</button>
+            <button style="color: orange;border: 0px;background-color: pink;">Read More</button>
         </div></section>
 <button style="border-radius:50px; color: aliceblue;background-color: orange;border: 0; font-size: xx-large;"> < </button>
 <button style="border-radius:50px; color: aliceblue;background-color: orange;border: 0; font-size: xx-large;"> > </button>
