--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis inventore officiis obcaecati corrupti enim quibusdam. Optio harum blanditiis quidem illum!</p>
             <button style="color: orange;border: 0px;background-color: pink;">Read More</button>
         </div></section>
-<button style="border-radius:50px; color: aliceblue;background-color: orange;border: 0; font-size: xx-large;"> < </button>
-<button style="border-radius:50px; color: aliceblue;background-color: orange;border: 0; font-size: xx-large;"> > </button>
+<button class="db" style="border-radius:50px; color: aliceblue;background-color: orange;border: 0; font-size: xx-large;"> < </button>
+<button class="db" style="border-radius:50px; color: aliceblue;background-color: orange;border: 0; font-size: xx-large;"> > </button>
 
 
 <h1>Our Stories</h1>
